<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:gravity="center"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/payment"
            style="@style/w_h_warmap"
            android:background="@drawable/payment_selecotr"
            android:paddingLeft="70dp"
            android:paddingTop="70dp"
            android:text="@string/payment"
            android:textColor="@color/whiteColor"
            android:textSize="35dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/manager"
            style="@style/w_h_warmap"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/payment"
            android:background="@drawable/manager_selector"
            android:paddingTop="70dp"
            android:text="@string/manager"
            android:textColor="@color/whiteColor"
            android:textSize="35dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/query"
            style="@style/w_h_warmap"
            android:layout_below="@+id/payment"
            android:layout_marginTop="15dp"
            android:background="@drawable/query_chexiao_selecotr"
            android:paddingTop="70dp"
            android:text="@string/query_chexiao"
            android:textColor="@color/whiteColor"
            android:textSize="35dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/setting"
            style="@style/w_h_warmap"
            android:layout_below="@+id/manager"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/payment"
            android:background="@drawable/setting_selector"
            android:paddingLeft="70dp"
            android:paddingTop="70dp"
            android:text="@string/setting"
            android:textColor="@color/whiteColor"
            android:textSize="35dp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>